# probabilistic-ssm

./: .gitignore  LICENSE  README.md  setup.cfg
exp/exp001b_artificial_lv/: common_args.txt  run_experiment.sh
exp/exp001b_lotkavolterra/: README.md
exp/exp003_log_sird/: .gitignore  README.md  common_args.txt  run_experiment.sh
src/probssm/: __init__.py  data.py  ivp.py  plotting.py  stacked_ssm.py  util.py
src/probssm/cli/kalman/: _likelihoods.py  log_sird.py  log_sird_run.py  lotkavolterra_run.py
src/probssm/cli/plots/: __init__.py  _style.py  lotkavolterra_plot.py  plot_log_sird.py  probnum.mplstyle  sirmodel.mplstyle
