[metadata]
name = probssm
version = attr: probssm.__version__
description = Probabilistic State Space Model for Joint Inference from Differential Equations and Data
author = Jonathan Schmidt
author-email = jonathan.schmidt@student.uni-tuebingen.de

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
install_requires =
    numpy
    scipy
    pandas
    probnum @ git+https://github.com/probabilistic-numerics/probnum.git
    matplotlib
    numpyro

[options.extras_require]
linting =
    pylint
formatting =
    black
    isort

[options.entry_points]
console_scripts =
    log-sird-run = probssm.cli.kalman.log_sird_run:main
    log-sird-plot = probssm.cli.plots.log_sird_plot:main
    lotkavolterra-run = probssm.cli.kalman.lotkavolterra_run:main
    lotkavolterra-plot = probssm.cli.plots.lotkavolterra_plot:main


